Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* types.h, usearch.c:
	rename restrict() and restrict member of struct search to make
	joe compile under HPUX with HP C compiler

Mon Aug  5 2002  Vitezslav Samel <samel@mail.cz>
	*** SECURITY ***
	* ufile.c:
	drop suid and sgid bits (if set) when creating backup files

Sat Jul 27 2002  Vitezslav Samel <samel@mail.cz>
	* jmacsrc.in, jpicorc.in, jstarrc.in:
	use .@7 terminfo entry for "End" key

Wed Jun 26 2002  Vitezslav Samel <samel@mail.cz>
	* bw.c, rc.c, rc.h, w.c:
	rename getcontext() to kmap_getcontext() to prevent conflict with glibc
	(from Debian patches)

Mon Jun 17 2002  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	insert braces to make if() block evident

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, rc.c, regex.c,
	termcap.c, tty.c, ublock.c, umath.c, vfile.c:
	change "expr, expr" to "expr; expr" where appropriate to make sources
	more readable (should have no impact on code) (take 2)

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* hash.c, hash.h:
	move hnext() definition into hash.c

Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
	* bw.c, rc.c, termcap.c, ufile.c, usearch.c:
	kill some warnings when compiled with -Wall

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	unwrap array elements in initialization of cmds[]

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* va.c, va.h:
	change aELEMENT #define to typedef

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* ufile.c:
	change write() to joe_write() to avoid partly copied files

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* termcap.c:
	strcmp() can return values other than -1/0/+1

Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, macro.c, path.c, pw.c, queue.h, rc.c, regex.c, scrn.c,
	scrn.h, tab.c, termcap.c, termidx.c, tty.c, tw.c, ublock.c, uedit.c,
	uerror.c, ufile.c, uformat.c, undo.c, usearch.c, ushell.c, vfile.c,
	vs.c, w.c: